Se quita validacion de cors